--- a/daojishi/app/src/main/res/layout/activity_main.xml
+++ b/daojishi/app/src/main/res/layout/activity_main.xml
@@ -83,4 +83,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.251" />
 
+    <Button
+        android:id="@+id/M_button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="跳转"
+        android:textSize="35dp"
+        app:backgroundTint="#E91E63"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.11" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
